# enigma-rust

./: Cargo.toml  README.md  config.toml
src/: config.rs  enigma.rs  main.rs
src/cli/: args.rs
src/enigma/: keyboard.rs  plugboard.rs  reflector.rs  rotors.rs
src/server/: server.rs
static/: index.html
static/js/: main.js
