[package]
name = "enigma-rust"
version = "0.1.0"
edition = "2021"
authors = ["corslyn"]
description = "An implementation of the Enigma Machine in Rust"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.6"
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
